Fix second button on IOS

--- a/main.css
+++ b/main.css
@@ -77,13 +77,10 @@ p, label {
 }
 
 #secondButton {
-    width: 70px;
-    height: 40px;
     font-size: 16px;
     border: none;
     color: #ffffff;
     background-color: #241e40;
-    text-align: center;
 }
 
 #logo {
